RESOLVED FIXED105095
[GTK][WK2] Memory leak in ChunkedUpdateDrawingArea::paintIntoUpdateChunk()
https://bugs.webkit.org/show_bug.cgi?id=105095
Summary [GTK][WK2] Memory leak in ChunkedUpdateDrawingArea::paintIntoUpdateChunk()
Chris Dumez
Reported 2012-12-15 10:16:37 PST
The value returned in cairo_create() is not adopted in ChunkedUpdateDrawingArea::paintIntoUpdateChunk().
Attachments
Patch (1.55 KB, patch)
2012-12-15 10:19 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2012-12-15 10:19:12 PST
WebKit Review Bot
Comment 2 2012-12-15 10:50:45 PST
Comment on attachment 179600 [details] Patch Clearing flags on attachment: 179600 Committed r137797: <http://trac.webkit.org/changeset/137797>
WebKit Review Bot
Comment 3 2012-12-15 10:50:49 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.