[GTK][WK2] Memory leak in ChunkedUpdateDrawingArea::paintIntoUpdateChunk() https://bugs.webkit.org/show_bug.cgi?id=105095

Reviewed by Martin Robinson.

Adopt the pointer returned by cairo_create() in
ChunkedUpdateDrawingArea::paintIntoUpdateChunk() to avoid leaking
memory.

* WebProcess/WebPage/gtk/ChunkedUpdateDrawingAreaGtk.cpp:
(WebKit::ChunkedUpdateDrawingArea::paintIntoUpdateChunk):


Canonical link: https://commits.webkit.org/123310@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137797 268f45cc-cd09-0410-ab3c-d52691b4dbfc